CHANGES IN VERSION 1.2.6
------------------------

NEW FEATURES

	o 'go_enrich' has new 'domains' argument which allows
	  to restrict the analysis to one or two of the three
	  GO-domains to save time
	o new function 'get_ids' returns GO-categories that partially
	  match the input string, together with ID and GO-domain

USER-LEVEL CHANGES

	o simplified 'get_anno_genes' (only GO-IDs as input,
	  go_enrich()-result is no longer supported as input)
	o 'get_parent_nodes' and 'get_child_nodes' now also return
	  the name of the parent or child; also duplicates are
	  removed and only the shortest distance is kept
	o sort 'go_enrich' output also on FWER and p-value 
	  for under-representation


CHANGES IN VERSION 1.2.5
------------------------

NEW FEATURES

	o new function 'get_anno_categories' returns 
	  associated GO-categories given genes
	o added man-pages for all R-functions
	  e.g. '?go_enrich'


CHANGES IN VERSION 1.2.4
------------------------

NEW FEATURES

	o new 'silent' option represses all output to the screen
	  except for warnings and error messages

IMPROVEMENTS
	  
	o modified generation of temporary files allows 
	  parallel processing with mclapply
	  
USER-LEVEL CHANGES

	o convert all output-columns that were factors to characters
	o sort 'go_enrich' output also on ontology and GO-ID
	  (after sorting on FWER and p-value)
	o sort genes in 'get_anno_genes' output (mixedsort)


CHANGES IN VERSION 1.2.3
------------------------

NEW FEATURES

	o mouse gene annotations and gene_coordinates
	o hg20 gene annotations and gene_coordinates
	o new function: 'plot_odds_ratio'

USER-LEVEL CHANGES

	o update ontology (last modified: 25.04.2017)
	o genes in go_enrich(...)[[2]] are sorted alphabetically
	  (mixedsort)
	o when genomic regions are provided as input, candidate
	  regions are implicitly also part of background
	  (like it is for single-genes-input)
	o output of go_enrich has a new element:
	  go_enrich()[[3]] = reference genome  

