@@ -26,7 +26,7 @@ cd /home/steffi_grote/R_packages/FuncBlocks_package
 R CMD build FuncBlocks #--resave-data
 
 # install package
-R CMD INSTALL FuncBlocks_1.2.4.tar.gz
+R CMD INSTALL FuncBlocks_1.2.6.tar.gz
 
 # check package
 R CMD check FuncBlocks_1.2.6.tar.gz
@@ -70,10 +70,9 @@ Rscript test_values.R
 (*) add in man-page get_categories an example that uses get_parent_nodes
 (*) sort go_enrich res by -fwer-under [n-candidate expected would always put the root nodes to the tail]
 (*) in plot_odds_ratio.Rd say how odds ratio is computed
-() add plot for wilcoxon (plot_scores: gos -> distribution/density of scores compared to root, violin?)
 (*) add value to plot_odds_ratio.Rd (return(invisible))
-
-
+(*) preserve input node-order in plot_odds_ratio
+() add plot for wilcoxon (plot_scores: gos -> distribution/density of scores compared to root, violin?)
 
 # binomial test, contingancy tables (1.3.0)
 () pull func source from github
@@ -92,6 +91,7 @@ Rscript test_values.R
 
 
 # general improvements
+() use digest md5sum instead of saved_results? maybe also store heads or something (andererseits nur 3Mb)
 () vignette [also show example get_anno_genes for input candidate and background genes. Clearly say that root_node==domain. Include table with versions of GO-tree and annotations]
 
 () data.table fuer get_anno_genes in 'find child nodes' and 'find genes annotated' dauert sehr lange wenn alle GO-IDs als input (vielleicht aus aba_enrich uebernehmen)
